--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "crime-data",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -13,6 +14,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "mapbox-gl": "^2.8.1",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/mapbox-gl": "^2.7.2"
   }
 }
