--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "d3-array": "^3.1.1",
+    "d3-scale": "^4.0.2",
+    "mapbox-gl": "^2.8.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-map-gl": "^7.0.13",
     "react-scripts": "5.0.1",
-    "mapbox-gl": "^2.8.1",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
@@ -43,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "@types/d3-array": "^3.0.2",
+    "@types/d3-scale": "^4.0.2",
     "@types/mapbox-gl": "^2.7.2"
   }
 }
