--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3-array": "^3.1.1",
     "d3-scale": "^4.0.2",
     "mapbox-gl": "^2.8.2",
+    "papaparse": "^5.3.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-map-gl": "^7.0.13",
@@ -48,6 +49,7 @@
   "devDependencies": {
     "@types/d3-array": "^3.0.2",
     "@types/d3-scale": "^4.0.2",
-    "@types/mapbox-gl": "^2.7.2"
+    "@types/mapbox-gl": "^2.7.2",
+    "@types/papaparse": "^5.3.2"
   }
 }
