--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,6 +22,7 @@
     "react-dom": "^18.1.0",
     "react-map-gl": "^7.0.13",
     "react-scripts": "5.0.1",
+    "react-select": "^5.3.2",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
