--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
-    "d3": "^7.4.4",
+    "ajv": "^8.11.0",
     "d3-array": "^3.1.1",
     "d3-scale": "^4.0.2",
+    "highcharts": "^10.1.0",
+    "highcharts-react-official": "^3.1.0",
     "mapbox-gl": "^2.8.2",
     "papaparse": "^5.3.2",
     "react": "^18.1.0",
